Resolved grammatical errors

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
                 Completed 10th Grade in National Centre for Excellence with 77% in 2017.
             </li>
             <li>
-                Completed Intermediate in Naryana e-Techno School with 66.5% in 2019.
+                Completed Intermediate in Narayana e-Techno School with 66.5% in 2019.
             </li>
             <li>
                 Completed B. Tech in CSE in Vellore Institute of Technology, Amaravati with a 9.2 CGPA in 2023.
@@ -35,7 +35,7 @@
     <div class="software-skills">
         <h2>Software Skills</h2>
         <ul>
-            <li><u>Web Sklls</u> : HTML, CSS, JavaScript, JQuery, PHP, Ajax</li>
+            <li><u>Web Skills</u> : HTML, CSS, JavaScript, JQuery, PHP, Ajax</li>
             <li><u>Frameworks</u> : ReactJS, Angular, Next.js, Django, Flask</li>
             <li><u>Software Packages</u> : Wordpress, Photoshop, OSCommerce</li>
         </ul>
