added lab2 and assignment 1 partially

--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 <body>
     <h1><center>G V Datta Adithya</center></h1>
@@ -82,6 +83,7 @@
             <li>I hereby declare that all the particulars given above are true to the best of my knowledge and belief.</li>
         </ul>
     </div>
+    <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="datta-adithya-5672a4190"><a class="LI-simple-link" href='https://in.linkedin.com/in/datta-adithya-5672a4190?trk=profile-badge'>Datta Adithya</a></div>
     <div class="footer">
         <p align="right"><b>Signature : G V Datta Adithya</b></p>
         <p><b>Place : Hyderabad</b></p>
