--- a/lab2/alumni.html
+++ b/lab2/alumni.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="header">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fvitap.ac.in%2Fadmission%2Foverview%2F&psig=AOvVaw1LFMtNloxvCe0AJorg6SLE&ust=1613885963426000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCLD6o-7f9-4CFQAAAAAdAAAAABAJ" alt="VIT AP Logo">
-            <h1>Vellore Institute of Technology AP University</h1>
+            <img id="vitap-image" src="./vitaplogo.png" alt="VIT AP Logo">
+            <h1><center>Vellore Institute of Technology AP University</center></h1>
             <div class="header-bar">
                 <a href="home.html">Home</a>
                 <a href="department.html">Department</a>
@@ -17,7 +17,7 @@
                 <a href="placement.html">Placements</a>
                 <a href="alumni.html">Alumni</a>
                 <a href="contact.html">Contact Us</a>
-                <a href="student-vtop-login.html">VTOP Student Login</a>
+                <a href="http://vtop2.vitap.ac.in:8070/vtop/initialProcess">VTOP Student Login</a>
             </div>
         </div>
         <div class="main-content">
