--- a/lab2/home.html
+++ b/lab2/home.html
@@ -4,30 +4,59 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
         <title>Home</title>
     </head>
-    <style>
-        #vitap-image {
-            width: 300px;
-            height: 100px;
-        }
-    </style>
     <body>
         <div class="header">
             <img id="vitap-image" src="./vitaplogo.png" alt="VIT AP Logo">
             <h1>Vellore Institute of Technology AP University</h1>
             <div class="header-bar">
-                <a href="home.html">Home</a>
-                <a href="department.html">Department</a>
-                <a href="student.html">Students</a>
-                <a href="placement.html">Placements</a>
-                <a href="alumni.html">Alumni</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="student-vtop-login.html">VTOP Student Login</a>
+                <a href="home.html">Home</a> |
+                <a href="department.html">Department</a> |
+                <a href="student.html">Students</a> |
+                <a href="placement.html">Placements</a> |
+                <a href="alumni.html">Alumni</a> |
+                <a href="contact.html">Contact Us</a> |
+                <a href="student-vtop-login.html">VTOP Student Login</a> |
             </div>
         </div>
         <div class="main-content">
-            <h1>Welcome to VIT-AP University</h1>
+            <p>VIT-AP University is a private university located in Amaravati, the capital of Andhra Pradesh, India. It is the first university located in the capital region. With a history of 32 years of innovaion in educational and research domains. VIT has been a forerunner in delivering quality education. Consistently ranked among the top education institutes in the country, the VIT group of institutions have had a proud tradition of pursuing knowledge and excellence. In keeping with the this tradition, the leadership at VIT-AP resonates a dynamic blend of academic initiative and industry partnership with a vision of creating one of hte finest academic destination in the world.</p>
+        </div>
+        <div class="detail-collection-form">
+            <form id="collection-form">
+                <fieldset>
+                    <legend>Student Details</legend>
+
+                    <label for="Fname">First Name : </label>
+                    <input type="text" name="fname" id="fname-input" autofocus required>
+                    <br>
+                    <label for="Lname">Last Name : </label>
+                    <input type="text" name="lname" id="lname-input" autofocus required>
+                    <br>
+                    <label for="Sregis">Registration Number : </label>
+                    <input type="text" name="regisno" id="regisno-input" autofocus required>
+                    <br>
+                    <label for="Email">Student Email : </label>
+                    <input type="email" name="email" id="email-input" required>
+                    <br>
+
+                    <label for="year-of-study">Year of Study</label>
+                    <select name="batch" id="batch">
+                        <option value="senior">Senior</option>
+                        <option value="junior">Junior</option>
+                        <option value="sophomore">Sophomore</option>
+                        <option value="fresher">Fresher</option>
+                    </select>
+                    <br>
+
+                    <label for="contact-number">Contact Number : </label>
+                    <input type="text" name="Contact Number" id="contact-number">
+
+                    <input type="submit" value="Submit">
+                </fieldset>
+            </form>
         </div>
         <div class="footer">
             <h1>VIT-AP University, Inavolu, Beside AP Secratariat, Pin Code : 522511</h1>
