Updated files for lab2 and assignment1

--- a/lab2/student.html
+++ b/lab2/student.html
@@ -27,6 +27,40 @@
                 <li><a href=https://forms.gle/iHjTaFoqjCikWAtp9">Register for Web Hunt 3.0 & Software Freedom Day, 2021</a></li>
                 <li><a href="https://www.runtheworld.today/app/invitation/18914">Embrace Carpe Noctem</a></li>
             </ol>
+            <div class="detail-collection-form">
+                <form id="collection-form">
+                    <fieldset>
+                        <legend>Student Details</legend>
+
+                        <label for="Fname">First Name : </label>
+                        <input type="text" name="fname" id="fname-input" autofocus required>
+                        <br>
+                        <label for="Lname">Last Name : </label>
+                        <input type="text" name="lname" id="lname-input" autofocus required>
+                        <br>
+                        <label for="Sregis">Registration Number : </label>
+                        <input type="text" name="regisno" id="regisno-input" autofocus required>
+                        <br>
+                        <label for="Email">Student Email : </label>
+                        <input type="email" name="email" id="email-input" required>
+                        <br>
+
+                        <label for="year-of-study">Year of Study</label>
+                        <select name="batch" id="batch">
+                            <option value="senior">Senior</option>
+                            <option value="junior">Junior</option>
+                            <option value="sophomore">Sophomore</option>
+                            <option value="fresher">Fresher</option>
+                        </select>
+                        <br>
+
+                        <label for="contact-number">Contact Number : </label>
+                        <input type="text" name="Contact Number" id="contact-number">
+
+                        <input type="submit" value="Submit">
+                    </fieldset>
+                </form>
+            </div>
         </div>
         <div class="footer">
             <h1>VIT-AP University, Inavolu, Beside AP Secratariat, Pin Code : 522511</h1>
