--- a/assignment1/about.html
+++ b/assignment1/about.html
@@ -4,15 +4,21 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./static/css/style.css">
         <title>About Us</title>
     </head>
     <body>
         <h1>About Us</h1>
-        <div class="redirect-links">
+        <ul>
             <li><a href="./home.html">Home Page</a></li>
-            <li><a href="./another.html">Another Page</a></li>
-            <li><a href="./about.html">About Us</a></li>
-        </div>
+            <li><a href="https://www.vitap.ac.in">Vellore Institute of Technology AP</a></li>
+            <li><a class="active" href="./about.html">About us</a></li>
+        </ul>
+        <p>This page has been designed by <em>G V Datta Adithya</em>.</p>
+
+        <footer>
+            <li class="active">Datta Adithya</li>
+            <li>19BCE7119</li>
+        </footer>
     </body>
 </html>
