Updated with Web Page Layout.

--- a/ELA/contact.html
+++ b/ELA/contact.html
@@ -8,35 +8,52 @@
         <title>Home</title>
     </head>
     <body>
-        <div class="header">
-            <img id="vitap-image" src="./vitaplogo.png" alt="VIT AP Logo">
-            <h1><center>Vellore Institute of Technology AP University</center></h1>
-            <div class="header-bar">
-                <a href="home.html">Home</a> |
-                <a href="department.html">Department</a> |
-                <a href="student.html">Students</a> |
-                <a href="placement.html">Placements</a> |
-                <a href="alumni.html">Alumni</a> |
-                <a href="contact.html">Contact Us</a> |
-                <a href="student-vtop-login.html">VTOP Student Login</a> |
+        <div class="row">
+            <div class="header">
+                <img id="vitap-image" src="./vitaplogo.png" alt="VIT AP Logo">
+                <div class="header-content">
+                    <h1>Vellore Institute of Technology AP University</h1>
+                </div>
             </div>
         </div>
-        
-        <div class="main-content">
-            <address>
-                <p><b>Contact us for Admissions:</b></p>
-                <p>Assistant Director (Admissions)</p>
-                <p>Room No. SRB-G30</p>
-                <p>VIT-AP University</p>
-                <p>(Beside AP Secratariat)</p>
-                <p>Near Vijayawada, 522 237</p>
-                <p>Andhra Pradesh</p>
-                <p><a href="mailto:">Admissions Contact</a></p>
-            </address>
-            <h2><em>Mobile Number : 0863 2370444/ 7901091283</em></h2>
+        <div class="topnav">
+            <a href="home.html">Home</a>
+            <a href="department.html">Department</a>
+            <a href="student.html">Students</a>
+            <a href="placement.html">Placements</a>
+            <a href="alumni.html">Alumni</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="student-vtop-login.html">VTOP Student Login</a>
+        </div>
+        <div class="row">
+            <div class="column-main">
+                <div class="main-content">
+                    <address>
+                        <p><b>Contact us for Admissions:</b></p>
+                        <p>Assistant Director (Admissions)</p>
+                        <p>Room No. SRB-G30</p>
+                        <p>VIT-AP University</p>
+                        <p>(Beside AP Secratariat)</p>
+                        <p>Near Vijayawada, 522 237</p>
+                        <p>Andhra Pradesh</p>
+                        <p><a href="mailto:">Admissions Contact</a></p>
+                    </address>
+                    <h2><em>Mobile Number : 0863 2370444/ 7901091283</em></h2>
+                </div>
+            </div>
+            <div class="column-notif">
+                <div class="notifications">
+                    <h2>Notifications</h2>
+                    <p>Web Hunt 3.0</p>
+                    <p>Photographic Event</p>
+                    <p>National Workshop on Data Science and Computing</p>
+                </div>
+            </div>
         </div>
         <div class="footer">
-            <h1>VIT-AP University, Inavolu, Beside AP Secratariat, Pin Code : 522511</h1>
+            <div class="footer-content">
+                <p>VIT-AP University, Inavolu, Beside AP Secratariat, Pin Code : 522511</p>
+            </div>
         </div>
     </body>
 </html>
