--- a/ELA/placement.html
+++ b/ELA/placement.html
@@ -8,25 +8,41 @@
         <title>Home</title>
     </head>
     <body>
-        <div class="header">
-            <img id="vitap-image" src="./vitaplogo.png" alt="VIT AP Logo">
-            <h1><center>Vellore Institute of Technology AP University</center></h1>
-            <div class="header-bar">
-                <a href="home.html">Home</a> |
-                <a href="department.html">Department</a> |
-                <a href="student.html">Students</a> |
-                <a href="placement.html">Placements</a> |
-                <a href="alumni.html">Alumni</a> |
-                <a href="contact.html">Contact Us</a> |
-                <a href="http://vtop2.vitap.ac.in:8070/vtop/initialProcess">VTOP Student Login</a> |
+        <div class="row">
+            <div class="header">
+                <img id="vitap-image" src="./vitaplogo.png" alt="VIT AP Logo">
+                <div class="header-content">
+                    <h1>Vellore Institute of Technology AP University</h1>
+                </div>
             </div>
         </div>
-        
-        <div class="main-content">
-            <h1>Welcome to VIT-AP University</h1>
+        <div class="topnav">
+            <a href="home.html">Home</a>
+            <a href="department.html">Department</a>
+            <a href="student.html">Students</a>
+            <a href="placement.html">Placements</a>
+            <a href="alumni.html">Alumni</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="student-vtop-login.html">VTOP Student Login</a>
+        </div>
+        <div class="row">
+            <div class="column-main">
+                <div class="main-content">
+                    <p>VIT-AP University is a private university located in Amaravati, the capital of Andhra Pradesh, India. It is the first university located in the capital region. With a history of 32 years of innovaion in educational and research domains. VIT has been a forerunner in delivering quality education. Consistently ranked among the top education institutes in the country, the VIT group of institutions have had a proud tradition of pursuing knowledge and excellence. In keeping with the this tradition, the leadership at VIT-AP resonates a dynamic blend of academic initiative and industry partnership with a vision of creating one of hte finest academic destination in the world.</p>
+                </div>
+            </div>
+            <div class="column-notif">
+                <div class="notifications">
+                    <h2>Notifications</h2>
+                    <p>Web Hunt 3.0</p>
+                    <p>Photographic Event</p>
+                    <p>National Workshop on Data Science and Computing</p>
+                </div>
+            </div>
         </div>
         <div class="footer">
-            <h1>VIT-AP University, Inavolu, Beside AP Secratariat, Pin Code : 522511</h1>
+            <div class="footer-content">
+                <p>VIT-AP University, Inavolu, Beside AP Secratariat, Pin Code : 522511</p>
+            </div>
         </div>
-    </body>
 </html>
