--- a/ETH/XMLTest/xmlex.html
+++ b/ETH/XMLTest/xmlex.html
@@ -4,29 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./static/css/style.css">
+        <link rel="stylesheet" href="style.css">
         <title>Home Page</title>
     </head>
     <body>
         <h1>The XMLHttpRequest Object</h1>
-        <button>Click here to display info</button>
+        <table id="info"></table>
+        <br>
+        <button onclick="loadDoc()">Click here to display info</button>
     </body>
-    <script>
-        function loadDoc(){
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function(){
-                if(this.readyState == 4 && this.status == 200){
-                    xmlFunc(this);
-                }
-            };
-            xhttp.open("GET", "http://127.0.0.1/info.xml", true);
-            xhttp.send();
-        }
-        function xmlFunc(xml){
-            var i;
-            var xmlDoc = xml.responseXML;
-            var table = "<tr><th>Subject Code</th><th>Subject Name</th></tr>";
-            var x = xmlDoc.getElementsByTagName("sub");
-        }
-    </script>
+    <script src="xml-access.js"></script>
 </html>
