--- a/CAT/validation.html
+++ b/CAT/validation.html
@@ -1,59 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      form {
-        display: inline-table;
-        margin: 10px;
-        padding: 10px;
-        border: 3px solid black;
-        border-radius: 2%;
-        background-color: mediumvioletred;
-        color: white;
-      }
-    </style>
-    <script>
-      function check() {
-        var x = document.getElementById("frm1").elements;
-        var i,
-          y,
-          flag = 0;
-        for (i = 0; i < x.length - 1; i++) {
-          y = x[i].value;
-          if (y == "") {
-            flag = 1;
-            alert("All fields must be filled in ");
-            console.log(x[i]);
-            break;
-          }
-        }
-        if (flag == 0) {
-          if (document.getElementById("msg").value.length <= 140) {
-            alert("Validation success");
-          } else {
-            alert("Message must be less than 140 characters");
-          }
-        }
-      }
-    </script>
-  </head>
-  <body>
-    <form id="frm1">
-      <label>Name</label><br />
-      <input type="text" /><br /><br />
-      <label>Email</label><br />
-      <input type="text" /><br /><br />
-      <label>Phone</label><br />
-      <input type="text" /> <br /><br />
-      <label>Message</label><br />
-      <textarea id="msg"></textarea><br /><br />
-      <button
-        type="button"
-        style="background-color: orange; color: white"
-        onclick="check()"
-      >
-        Submit
-      </button>
-    </form>
-  </body>
+    <head>
+        <style>
+form {
+    display: inline-table;
+    margin: 10px;
+    padding: 10px;
+    border: 3px solid black;
+    border-radius: 2%;
+    background-color: mediumvioletred;
+    color: white;
+}
+        </style>
+        <script>
+            function check() {
+                var x = document.getElementById("frm1").elements;
+                var i, y, flag = 0;
+                for (i = 0; i < x.length - 1; i++) {
+                    y = x[i].value;
+                    if (y == "") {
+                        flag = 1;
+                        alert("All fields must be filled in ");
+                        console.log(x[i]);
+                        break;
+                    }
+                }
+                if (flag == 0) {
+                    if (document.getElementById("msg").value.length <= 140) {
+                        alert("Validation success");
+                    } else {
+                        alert("Message must be less than 140 characters");
+                    }
+                }
+            }
+        </script>
+    </head>
+    <body>
+        <form id="frm1">
+            <label>Name</label><br />
+            <input type="text" /><br /><br />
+            <label>Email</label><br />
+            <input type="text" /><br /><br />
+            <label>Phone</label><br />
+            <input type="text" /> <br /><br />
+            <label>Message</label><br />
+            <textarea id="msg"></textarea><br /><br />
+            <button
+                type="button"
+                style="background-color: orange; color: white"
+                onclick="check()"
+                >
+                Submit
+            </button>
+        </form>
+    </body>
 </html>
